--- a/CustomPresentationViewController/CustomPresentationViewController/Base.lproj/Main.storyboard
+++ b/CustomPresentationViewController/CustomPresentationViewController/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Scl-sD-3Pc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Scl-sD-3Pc">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,46 +15,46 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T8B-E3-POr">
-                                <rect key="frame" x="16" y="338" width="568" height="44"/>
-                                <color key="backgroundColor" red="0.9529411793" green="0.2588235438" blue="0.20784313979999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T8B-E3-POr">
+                                <rect key="frame" x="16" y="464" width="361" height="44"/>
+                                <color key="backgroundColor" red="0.9529411793" green="0.2588235438" blue="0.20784313979999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="J8Q-hD-fNv"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <action selector="thirdAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6vO-p5-zyZ"/>
+                                    <action selector="thirdActionWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xVd-N7-bab"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yNE-cU-6Me">
-                                <rect key="frame" x="16" y="218" width="568" height="44"/>
-                                <color key="backgroundColor" red="0.9529411793" green="0.2588235438" blue="0.20784313979999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yNE-cU-6Me">
+                                <rect key="frame" x="16" y="344" width="361" height="44"/>
+                                <color key="backgroundColor" red="0.9529411793" green="0.2588235438" blue="0.20784313979999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="LLr-We-BlZ"/>
                                 </constraints>
                                 <state key="normal" title="First">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="firstAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WeJ-vq-4D1"/>
+                                    <action selector="firstActionWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iyF-IR-Hbq"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GSa-vZ-9lC">
-                                <rect key="frame" x="16" y="278" width="568" height="44"/>
-                                <color key="backgroundColor" red="0.9529411793" green="0.2588235438" blue="0.20784313979999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GSa-vZ-9lC">
+                                <rect key="frame" x="16" y="404" width="361" height="44"/>
+                                <color key="backgroundColor" red="0.9529411793" green="0.2588235438" blue="0.20784313979999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="hzm-8F-VIh"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <action selector="secondAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uUe-cj-saB"/>
+                                    <action selector="secondActionWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7LK-xy-RRN"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="GSa-vZ-9lC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="3ru-sR-PbZ"/>
                             <constraint firstAttribute="trailing" secondItem="T8B-E3-POr" secondAttribute="trailing" constant="16" id="4oJ-id-14F"/>
@@ -79,7 +80,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Scl-sD-3Pc" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="cBO-6K-fGP">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
