--- a/CustomPresentationViewController/CustomPresentationViewController/CustomPresentationController/CustomPresentation.storyboard
+++ b/CustomPresentationViewController/CustomPresentationViewController/CustomPresentationController/CustomPresentation.storyboard
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--FirstA View Controller-->
@@ -14,20 +15,24 @@
                         <viewControllerLayoutGuide type="bottom" id="jlt-Ea-tbb"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="6pz-fP-mMO">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fRv-pc-5Kh">
-                                <rect key="frame" x="277" y="285" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fRv-pc-5Kh">
+                                <rect key="frame" x="173" y="405" width="46" height="30"/>
                                 <state key="normal" title="Button">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="9cg-uH-c84" kind="presentation" id="6yn-ZV-GC9"/>
+                                    <segue destination="9cg-uH-c84" kind="presentation" id="lf8-gC-sWY"/>
                                 </connections>
                             </button>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="XGg-7L-0gw">
+                                <rect key="frame" x="-39" y="584" width="393" height="0.0"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </datePicker>
                         </subviews>
-                        <color key="backgroundColor" red="0.29411764709999999" green="0.68235294120000001" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.29411764709999999" green="0.68235294120000001" blue="0.30980392159999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="fRv-pc-5Kh" firstAttribute="centerX" secondItem="6pz-fP-mMO" secondAttribute="centerX" id="Wbx-vd-BrJ"/>
                             <constraint firstItem="fRv-pc-5Kh" firstAttribute="centerY" secondItem="6pz-fP-mMO" secondAttribute="centerY" id="mRL-ke-8EK"/>
@@ -36,7 +41,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k8s-VN-8lf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="511" y="462"/>
+            <point key="canvasLocation" x="510.68702290076334" y="461.97183098591552"/>
         </scene>
         <!--FirstB View Controller-->
         <scene sceneID="6Q1-Hj-Vaf">
@@ -47,25 +52,26 @@
                         <viewControllerLayoutGuide type="bottom" id="emK-ri-6e8"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="DJE-p8-Qhh">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qhD-JC-PeC">
-                                <rect key="frame" x="273" y="285" width="54" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qhD-JC-PeC">
+                                <rect key="frame" x="169" y="386" width="54" height="30"/>
                                 <state key="normal" title="Dismiss">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="dismissAction:" destination="9cg-uH-c84" eventType="touchUpInside" id="jtm-bJ-L20"/>
+                                    <action selector="dismissActionWithSender:" destination="9cg-uH-c84" eventType="touchUpInside" id="8oO-X8-vnH"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.9529411793" green="0.2588235438" blue="0.20784313979999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.9529411793" green="0.2588235438" blue="0.20784313979999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="qhD-JC-PeC" firstAttribute="centerY" secondItem="DJE-p8-Qhh" secondAttribute="centerY" id="CZq-Cj-Pk9"/>
                             <constraint firstItem="qhD-JC-PeC" firstAttribute="centerX" secondItem="DJE-p8-Qhh" secondAttribute="centerX" id="GY2-5g-vUm"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="h40-9h-YTj"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="urA-x2-wMT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
